Repaired the following bugs: - filter button hides too quickly to the left - replace filter button with div element so that it does not show blue box on mobile - data loading is too fast, after scanning you have to refresh the page to see the menu content - clicking on categories during active filtering should hide and clear the filter - added missing translations

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,14 @@ input[type="password"]:active {
     display: none;
 }
 
+:focus {
+    outline: none;
+}
+
+* {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .localization-container {
     max-width: 100%;
     height: 40px;
@@ -164,10 +172,13 @@ input[type="password"]:active {
     color: #222;
 }
 
+.no-positions-text {
+    color: #7D7D7D;
+}
 
 /* SEARCH BUTTON */
 .search-initial-circle {
-    background: #FFF;;
+    background: #FFF;
     border: 0;
     border-radius: 100px;
     width: 34px;
@@ -209,11 +220,29 @@ input[type="password"]:active {
 }
 
 .search-button:hover {
-    background: #FFF;;
+    background: #FFF;
 }
 
 .search-icon {
     margin-left: 7px;
+}
+
+.search-form-container {
+    overflow: hidden;
+    width: 0;
+    transition: width 0.5s ease, opacity 0.5s ease;
+    display: flex;
+    align-items: center;
+}
+
+.search-form-container.visible {
+    width: 100%;
+    opacity: 1;
+}
+
+.search-form-container.hidden {
+    width: 0;
+    opacity: 0;
 }
 
 .search-button-form {
@@ -452,18 +481,19 @@ input[type="password"]:active {
 
 /* ----- LOADING SPINNER ----- */
 .spinner-container {
-    position: relative;
+    position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 220px);
+    z-index: 9000;
 }
 
 .spinner {
     transform: translate(-50%, -50%);
     border: 8px solid rgba(0, 0, 0, 0.1);
-    border-top: 8px solid #6940C6;
+    border-top: 8px solid #129E4D;
     border-radius: 50%;
     width: 40px;
     height: 40px;
@@ -480,7 +510,7 @@ input[type="password"]:active {
     transform: translate(-50%, -50%);
     border-width: 4px;
     border-style: solid;
-    border-color: #6940C6 rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2);
+    border-color: #129E4D rgba(0, 0, 0, 0.2) rgba(0, 0, 0, 0.2);
     border-image: initial;
     border-radius: 50%;
     width: 0.8rem;
